--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="index.html">Home</a>
             <a class="cabecalho__menu__link" href="sobre.html" >Sobre mim</a>
+            <div>
+                <input type="checkbox"  class="checkbox" id="chk">
+                <label class="label" for="chk">
+                    <i class="fas fa-moon"></i>
+                    <i class="fas fa-sun"></i>
+                    <div class="bola"></div>
+                </label>
+            </div>
         </nav>
     </header>
     <main class="apresentacao">
@@ -32,5 +40,7 @@
     <footer class="rodape">
         <p>Desenvolvido por Raíssa</p>
     </footer>
+    <script src="javascript.js"></script>
+    <script src="https://kit.fontawesome.com/998c60ef77.js" crossorigin="anonymous"></script>
 </body>
 </html>
