--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <div>
                 <input type="checkbox"  class="checkbox" id="chk">
                 <label class="label" for="chk">
-                    <i class="fas fa-moon"></i>
                     <i class="fas fa-sun"></i>
+                    <i class="fas fa-moon"></i>
                     <div class="bola"></div>
                 </label>
             </div>
@@ -29,10 +29,10 @@
             <p class="apresentacao__conteudo__paragrafo">Olá! Sou Raíssa Bespalec Daloia, desenvolvedora Front-end com especialidade em React, HTML e CSS. Faço o seu design virar realidade. Vamos conversar?</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse as minhas redes:</h2>
-                <a class="apresentacao__links__redes" href="https://www.instagram.com/rah_bespalec/" target="a_blank">
+                <a id="botao" class="apresentacao__links__redes" href="https://www.instagram.com/rah_bespalec/" target="a_blank">
                     <img src="img/instagram.png">Instagram</a>
-                <a class="apresentacao__links__redes" href="https://github.com/rahbespalec" target="a_blank"><img src="img/github.png">GitHub</a>
-                <a class="apresentacao__links__redes" href="https://wa.me/11987014279 " target="a_blank"><img src="img/whatsapp.png" class="apresentacao__links__logo">Whatsapp</a>
+                <a id="botao" class="apresentacao__links__redes" href="https://github.com/rahbespalec" target="a_blank"><img src="img/github.png">GitHub</a>
+                <a id="botao" class="apresentacao__links__redes" href="https://wa.me/11987014279 " target="a_blank"><img src="img/whatsapp.png" class="apresentacao__links__logo">Whatsapp</a>
             </div>
         </section>
         <img class="apresentacao__imagem" src="img/raiss.jpg" alt="Foto da Raíssa sorrindo">
